@@ -93,7 +93,7 @@ my %host_form = (
 
   {ftype=>0, name=>'Host specific',iff=>['type','[12]']},
   {ftype=>2, tag=>'ns_l', name=>'Name servers (NS)', type=>['domain','text'],
-   fields=>2, 
+   fields=>2, maxlen=>[64,20],
    len=>[30,20], empty=>[0,1], elabels=>['NS','comment'], iff=>['type','2']},
   {ftype=>2, tag=>'wks_l', name=>'WKS', no_empty=>1,
    type=>['text','text','text'], fields=>3, len=>[10,30,10], empty=>[0,0,1],
@@ -119,7 +119,7 @@ my %host_form = (
   {ftype=>2, tag=>'srv_l', name=>'SRV entries', fields=>5,len=>[5,5,5,30,10],
    empty=>[0,0,0,0,1],elabels=>['Priority','Weight','Port','Target','Comment'],
    type=>['priority','priority','priority','fqdn','text'],
-   iff=>['type','8']},
+   iff=>['type','8'],maxlen=>[5,5,5,64,10]},
 
   {ftype=>0, name=>'Record info', no_edit=>0},
   {ftype=>4, name=>'Record created', tag=>'cdate_str', no_edit=>1},
@@ -209,7 +209,7 @@ my %new_host_form = (
   {ftype=>1, tag=>'domain', name=>'Hostname (delegation)',
    type=>'zonename', len=>64, conv=>'L', iff=>['type','[2]']},
   {ftype=>1, tag=>'cname_txt', name=>'Alias for', type=>'fqdn', len=>60,
-   iff=>['type','4']},
+   iff=>['type','4'],maxlen=>64},
   {ftype=>3, tag=>'net', name=>'Subnet', type=>'enum',
    enum=>\%new_host_nets,elist=>\@new_host_netsl, iff=>['type','(1|101)']},
   {ftype=>1, tag=>'ip',
@@ -222,7 +222,7 @@ my %new_host_form = (
    type=>['priority','mx','text'], fields=>3, len=>[5,30,20], empty=>[0,0,1],
    elabels=>['Priority','MX','comment'], iff=>['type','3']},
   {ftype=>2, tag=>'ns_l', name=>'Name servers (NS)', type=>['domain','text'],
-   fields=>2,
+   fields=>2, maxlen=>[64,20],
    len=>[30,20], empty=>[0,1], elabels=>['NS','comment'], iff=>['type','2']},
   {ftype=>2, tag=>'printer_l', name=>'PRINTER entries',
    type=>['text','text'], fields=>2,len=>[40,20], empty=>[0,1],
@@ -269,7 +269,7 @@ my %new_host_form = (
   {ftype=>2, tag=>'srv_l', name=>'SRV entries', fields=>5,len=>[5,5,5,30,10],
    empty=>[0,0,0,0,1],elabels=>['Priority','Weight','Port','Target','Comment'],
    type=>['priority','priority','priority','fqdn','text'],
-   iff=>['type','8']},
+   iff=>['type','8'],maxlen=>[5,5,5,64,10]},
 
   {ftype=>0, name=>'Record info', iff=>['type','[147]']},
   {ftype=>1, name=>'Expiration date', tag=>'expiration', len=>30,
@@ -298,7 +298,7 @@ my %restricted_new_host_form = (
    type=>['priority','mx','text'], fields=>3, len=>[5,30,20], empty=>[0,0,1],
    elabels=>['Priority','MX','comment'], iff=>['type','3']},
   {ftype=>2, tag=>'ns_l', name=>'Name servers (NS)', type=>['text','text'],
-   fields=>2,
+   fields=>2, maxlen=>[64,20],
    len=>[30,20], empty=>[0,1], elabels=>['NS','comment'], iff=>['type','2']},
   {ftype=>2, tag=>'printer_l', name=>'PRINTER entries', 
    type=>['text','text'], fields=>2,len=>[40,20], empty=>[0,1], 
