@@ -28,7 +28,7 @@ my %server_form = (
   {ftype=>4, tag=>'masterserver', name=>'Masterserver ID', hidden=>1},
   {ftype=>4, tag=>'server_type', name=>'Server type'},
   {ftype=>1, tag=>'hostname', name=>'Hostname',type=>'fqdn', len=>40,
-   default=>'ns.my.domain.'},
+   default=>'ns.my.domain.',maxlen=>64},
   {ftype=>1, tag=>'hostaddr', name=>'IP address',type=>'ip',empty=>0,len=>15},
   {ftype=>3, tag=>'zones_only', name=>'Output mode', type=>'enum',
    conv=>'L', enum=>{t=>'Generate named.zones',f=>'Generate full named.conf'}},
@@ -40,7 +40,7 @@ my %server_form = (
 
   {ftype=>0, name=>'Defaults for zones'},
   {ftype=>1, tag=>'hostmaster', name=>'Hostmaster', type=>'fqdn', len=>30,
-   default=>'hostmaster.my.domain.'},
+   default=>'hostmaster.my.domain.',maxlen=>64},
   {ftype=>1, tag=>'refresh', name=>'Refresh', type=>'int', len=>10},
   {ftype=>1, tag=>'retry', name=>'Retry', type=>'int', len=>10},
   {ftype=>1, tag=>'expire', name=>'Expire', type=>'int', len=>10},
@@ -182,10 +182,10 @@ my %new_server_form=(
   {ftype=>1, tag=>'name', name=>'Name', type=>'text',
    len=>20, empty=>0},
   {ftype=>1, tag=>'hostname', name=>'Hostname',type=>'fqdn', len=>40,
-   default=>'ns.my.domain.'},
+   default=>'ns.my.domain.',maxlen=>64},
   {ftype=>1, tag=>'hostaddr', name=>'IP address',type=>'ip',empty=>0,len=>15},
   {ftype=>1, tag=>'hostmaster', name=>'Hostmaster', type=>'fqdn', len=>30,
-   default=>'hostmaster.my.domain.'},
+   default=>'hostmaster.my.domain.',maxlen=>64},
   {ftype=>1, tag=>'directory', name=>'Configuration directory', type=>'path',
    len=>30, empty=>0},
   {ftype=>3, tag=>'masterserver', name=>'Slave for', type=>'enum',
