@@ -82,11 +82,11 @@ my %zone_form = (
   {ftype=>5, tag=>'ip', name=>'IP addresses (A)', iff=>['type','M'],
    iff2=>['reverse','f']},
   {ftype=>2, tag=>'ns', name=>'Name servers (NS)', type=>['text','text'],
-   fields=>2,
+   fields=>2, maxlen=>[64,20],
    len=>[30,20], empty=>[0,1], elabels=>['NS','comment'], iff=>['type','M']},
   {ftype=>2, tag=>'mx', name=>'Mail exchanges (MX)', 
    type=>['int','text','text'], fields=>3, len=>[5,30,20], empty=>[0,0,1], 
-   elabels=>['Priority','MX','comment'], iff=>['type','M'], 
+   elabels=>['Priority','MX','comment'], iff=>['type','M'], maxlen=>[5,64,20],
    iff2=>['reverse','f']},
   {ftype=>2, tag=>'txt', name=>'Info (TXT)', type=>['text','text'], fields=>2,
    len=>[40,15], empty=>[0,1], elabels=>['TXT','comment'], iff=>['type','M'],
