@@ -216,9 +216,13 @@ foreach $host (sort keys %zonedata) {
     # print "A=",$rec->{A}->[$k],"\n";
     push @ip_l, [0,$rec->{A}->[$k],'true','true'];
   }
-  undef $ns_l;
+  undef @ns_l;
   for $k (0..$#{$rec->{NS}}) {
     push @ns_l, [0,$rec->{NS}->[$k],''];
+  }
+  undef @srv_l;
+  for $k (0..$#{$rec->{SRV}}) {
+    push @srv_l, [0,split(' ', $rec->{SRV}->[$k]),''];
   }
 
   $res = add_host({zone=>$zoneid,
@@ -233,6 +237,7 @@ foreach $host (sort keys %zonedata) {
 		   ttl=>$host_ttl,
 		   txt_l=>\@txt_l,
 		   ns_l=>\@ns_l,
+		   srv_l=>\@srv_l,
 		   ip=>\@ip_l
 		  });
 
